--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   "scripts": {
     "start": "nest start",
     "dev": "nest start --watch",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "typeorm": "typeorm-ts-node-commonjs -d src/database/data-source.ts",
+    "test": "jest",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:run": "npm run typeorm -- -d src/database/data-source.ts migration:run",
+    "migration:revert": "npm run typeorm -- -d src/database/data-source.ts migration:revert",
     "migration:generate": "npm run typeorm -- migration:generate src/database/migrations/InitSchema",
-    "migration:run": "npm run typeorm -- migration:run",
-    "migration:revert": "npm run typeorm -- migration:revert"
+    "build": "tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
+    "start:prod": "node dist/main.js",
+    "migration:run:dist": "node ./node_modules/typeorm/cli.js -d dist/database/data-source.js migration:run"
   },
   "repository": {
     "type": "git",
@@ -28,6 +31,9 @@
   },
   "homepage": "https://github.com/WinterJet2021/May-Win-NSP-Project#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.962.0",
+    "@aws-sdk/client-sfn": "^3.965.0",
+    "@aws-sdk/node-http-handler": "^3.370.0",
     "@nestjs/common": "^11.1.9",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.9",
@@ -35,9 +41,12 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.1.9",
     "@nestjs/typeorm": "^11.0.0",
+    "@vendia/serverless-express": "^4.12.6",
+    "aws-lambda": "^1.0.7",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "module-alias": "^2.2.3",
     "mysql2": "^3.15.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -47,12 +56,16 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^11.1.9",
+    "@types/aws-lambda": "^8.10.159",
     "@types/bcrypt": "^6.0.0",
     "@types/jest": "^30.0.0",
     "@types/mocha": "^10.0.10",
     "@types/passport-jwt": "^4.0.1",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
-    "typeorm": "^0.3.28"
+    "typescript": "^5.9.3"
   }
 }
